# libspt

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  Makefile  Makefile.inc  README.md
docs/: index.html
examples/: Makefile  serialexample.c  vg.sh
src/: Makefile  Makefile.inc  base64.c  data_fifo.c  serial_io.c  spt.c  spt_logger.c  tty_utils.c
src/include/: base64.h  data_fifo.h  serial_io.h  spt.h  spt_logger.h  tty_utils.h  unused.h
tests/: CMakeLists.txt  data_fifo_test.cpp
